@@ -3,6 +3,7 @@ Changes for 3.4.9rc1
 New features:
 
 Bug fixes:
+...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
 ..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
 ...G...PS. [ZBX-13579] fixed unnecessary data getting when agent becomes available in the non-collection data period (Sergejs)
 ..F....... [ZBX-13685] fixed maintenance entries displayed in list when filter is applied (agriscenko)
